log/build_2024-07-23_10-34-17/drone_sensing/stderr.log
  File "/home/zuri2102/sharedDocuments/bwsi-uav-good/flying_squirrels_architecture/install/drone_sensing/lib/python3.10/site-packages/drone_sensing/stereo_cam.py", line 93
    self.stereo_cam_pub = self.create_publisher( #TODO, #TODO, 10))  # message type, topic name, queue size
                                               ^
SyntaxError: '(' was never closed

